--- a/creAI/web/index.html
+++ b/creAI/web/index.html
@@ -3,6 +3,10 @@
     <head>
       <meta charset="UTF-8">
       <title>creAI</title>
+
+      <link rel="icon" href="img/icon.svg">
+
+
       <link rel="stylesheet" type="text/css" href="css/maincss.css">
       <link rel="stylesheet" type="text/css" href="css/icons.css">
     </head>
