--- a/creAI/gui/index.html
+++ b/creAI/gui/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>creAI</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/main.css">
